# email-templates-manager

./: README.md  README_teste.md  setup.cfg  setup.py
email_templates_manager/: admin.py  apps.py  email.py  forms.py  models.py  shortcuts.py  urls.py  views.py
email_templates_manager/migrations/: 0001_initial.py  0002_auto_20220619_1610.py  0003_rename_modified_template_created.py
email_templates_manager/templates/: email_preview.html
